# project_s

./: Dockerfile  LICENSE  README.md  example.env  pyproject.toml  report.md  requirements.txt  run_app.py
src/project_s/: app.py  crew.py  main.py
src/project_s/config/: agents.yaml  tasks.yaml
